# expose

./: .gitignore  .rubocop.yml  .ruby-version  Cargo.toml  Dockerfile  Gemfile  LICENSE  Makefile  README.md  docker-build.bash  docker-compose.yml  go.mod  go.sum  package-lock.json  package.json  tailwind.config.js
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: docker_image.yml  main.yml
app/channels/: proxied_requests_channel.rb
app/channels/application_cable/: connection.rb
app/controllers/: application_controller.rb  cli_connections_controller.rb  home_controller.rb  proxied_requests_controller.rb  sessions_controller.rb  users_controller.rb
app/helpers/: application_helper.rb
app/javascript/: RandomToken.js  application.js
app/javascript/channels/: consumer.js  index.js  proxied_requests_channel.js
app/javascript/controllers/: api_token_generator_controller.js  copy_button_controller.js  flash_controller.js
app/lib/: authenticate.rb  sub_domain_generator.rb
app/lib/domain_matcher/: dynamic_domain.rb  naked_domain.rb
app/lib/proxy/: connection_manager.rb  middleware.rb
app/models/: cli_connection.rb  user.rb
app/views/cli_connections/: _cli_connection.html.erb  _cli_connection.json.jbuilder  new.html.erb  show.html.erb  show.json.jbuilder
app/views/devise/sessions/: new.html.erb
app/views/home/: show.html.erb
app/views/layouts/: application.html.erb
app/views/shared/: _header.html.erb
app/views/users/: edit.html.erb
assets/: assets.go
assets/x509/: gen.sh  server.crt  server.key
client/: flags.go  main.go
conf/: default.json
config/: application.rb  cable.yml  credentials.yml.enc  database.yml  importmap.rb  proxy.yml  routes.rb
config/environments/: development.rb  production.rb
config/initializers/: devise.rb  proxy.rb
config/locales/: en.yml
db/: schema.rb
db/migrate/: 20230121135425_devise_create_users.rb  20230121160744_create_cli_connections.rb  20230121174531_add_api_token_to_users.rb
environment/: docker-compose.yml
expose/: Cargo.toml  index.html
expose/src/: connection.rs  error.rs  main.rs
exposed/: Cargo.toml  build.rs  package.json
exposed/migrations/: 20230312211035_add_connections_table.sql
exposed/src/: errors.rs  main.rs  settings.rs  sshd.rs
exposed/src/controllers/: connections.http  connections.rs  mod.rs  proxy.rs  request.http
exposed/src/middlewares/: vhost.rs
exposed/src/models/: connection.rs
exposed/src/util/: wildcard_host_guard.rs
exposed/src/views/: connections.rs
exposed/src/websockets/: messages.rs  mod.rs  server.rs  session.rs
exposed/templates/: base.html  index.html
public/: 404.html  422.html  500.html
server/: auth.go  flags.go  main.go  tunnelServiceImpl.go
server/clients/: client.go  handler.go
server/tunnel/: http.go  tcp.go  tunnel.go
server/tunnelService/: tunnelService.pb.go  tunnelService.proto  tunnelService_grpc.pb.go
shared/: Cargo.toml
shared/src/dto/: connection.rs  mod.rs  ws.rs
src/: awc_client.rs  connection.rs  dto.rs  error.rs  main.rs  settings.rs  utils.rs
src/connection/: dto.rs  mod.rs
src/controllers/: connections.http  connections.rs  mod.rs  request.http  request.rs  types.rs
src/middlewares/: mod.rs
src/models/: connection.rs  mod.rs  request.rs
src/server_conf/: mod.rs
src/ssh/: mod.rs
src/util/: mod.rs
src/views/: mod.rs
test/: test_helper.rb
test/channels/: proxied_requests_channel_test.rb
test/channels/application_cable/: connection_test.rb
test/controllers/: cli_connections_controller_test.rb  home_controller_test.rb  users_controller_test.rb
test/fixtures/: cli_connections.yml  users.yml
