[package]
name = "expose"
description = "Expose is a service that exposes one or more of your local ports to the outside world. It also includes a web interface to inspect and replay the requests."
version = "0.1.0"
edition = "2021"
authors = ["Armand Mégrot <armand.megrot@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1.0.71"
awc = { version = "3.1.1", features = ["rustls"] }
clap = { version = "4.1.10", features = ["cargo", "derive", "wrap_help"] }
clap_complete = "4.1.5"
clap-verbosity-flag = "2.0.0"
derive_more = "0.99.17"
env_logger = "0.10.0"
futures-util = "0.3.27"
log = "0.4.17"
rustls = "0.21.1"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["rt", "macros", "rt-multi-thread"] }
