[package]
name = "expose"
description = "Expose is a service that exposes one or more of your local ports to the outside world. It also includes a web interface to inspect and replay the requests."
version = "0.1.0"
edition = "2021"
authors = ["Armand Mégrot <armand.megrot@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.10", features = ["cargo", "derive", "wrap_help"] }
clap-verbosity-flag = "2.0.0"
clap_complete = "4.1.5"
log = "0.4.17"
env_logger = "0.10.0"
awc = "3.1.1"
actix-rt = "2.8.0"
serde = "1.0.157"
serde_json = "1.0.94"
shared = { path = "../shared" }
futures-util = "0.3.27"
actix-codec = "0.5.0"
actix = "0.13.0"
thiserror = "1.0.40"
