[package]
name = "expose"
description = "Expose is a service that exposes one or more of your local ports to the outside world. It also includes a web interface to inspect and replay the requests."
version = "0.1.0"
edition = "2021"
authors = ["Armand Mégrot <armand.megrot@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
awc = { version = "3.1.1", features = ["rustls"] }
clap = { version = "4.1.10", features = ["cargo", "derive", "wrap_help"] }
clap_complete = "4.1.5"
clap-verbosity-flag = "2.0.0"
env_logger = "0.10.0"
futures-util = "0.3.27"
log = "0.4.17"
rustls = "0.21.1"
serde = "1.0.157"
serde_json = "1.0.94"
shared = { path = "../shared" }
thiserror = "1.0.40"
