[package]
name = "exposed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
config = "0.13.3"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
url = { version = "2.3.1", features = ["serde"] }
thiserror = "1.0.39"
tracing = "0.1.37"
askama = "0.12.0"
derive_more = "0.99.17"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
futures-util = "0.3.27"
shared = { path = "../shared" }
actix-web-actors = "4.2.0"
actix = "0.13.0"
tokio = { version = "1.27.0" }

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = ["runtime-actix-rustls", "postgres", "macros", "migrate", "uuid", "chrono", "json"]
