[package]
name = "exposed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-files = "0.6"
actix-web = "4"
actix-web-actors = "4"
anyhow = "1.0.71"
askama = "0.12.0"
async-trait = "0.1.68"
awc = "3"
config = "0.13.3"
derive_more = "0.99.17"
env_logger = "0.10.0"
futures-util = "0.3.27"
russh = "0.37.1"
russh-keys = "0.37.1"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
shared = { path = "../shared" }
thiserror = "1.0.39"
tokio = { version = "1.27.0", features = ["net"] }
tokio-util = "0.7.8"
tracing = "0.1.37"
url = { version = "2.3.1", features = ["serde"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
  "runtime-actix-rustls",
  "postgres",
  "macros",
  "migrate",
  "uuid",
  "chrono",
  "json",
]
